objects/Competitive_Landscape__c/Competitive_Landscape__c.object-meta.xml
<CustomObject>
    <label>Competitive Landscape</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>CL Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Landscape</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>