objects/Competitive_Landscape__c/fields/Customer_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Stakeholder paying for the competitive product</description>
    <inlineHelpText>Customer Stakeholder paying for the competitive product</inlineHelpText>
    <label>Customer Stakeholder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Competitive Landscape</relationshipLabel>
    <relationshipName>Competitive_Landscape</relationshipName>
    <type>Lookup</type>
</CustomField>