objects/Competitive_Landscape__c/fields/Incumbent_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Competitor__c</fullName>
    <description>Incumbent Competitor</description>
    <inlineHelpText>Incumbent Competitor</inlineHelpText>
    <label>Incumbent Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alienvault</fullName>
            </value>
            <value>
                <fullName>Cimcor</fullName>
            </value>
            <value>
                <fullName>Custom Solution</fullName>
            </value>
            <value>
                <fullName>LogRhythm</fullName>
            </value>
            <value>
                <fullName>McAfee</fullName>
            </value>
            <value>
                <fullName>No Competition</fullName>
            </value>
            <value>
                <fullName>OSSEC</fullName>
            </value>
            <value>
                <fullName>Symantec</fullName>
            </value>
            <value>
                <fullName>Tripwire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>