objects/Competitive_Landscape__c/fields/Number_of_Servers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Servers__c</fullName>
    <label>Number of Servers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>