objects/Competitive_Landscape__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Competitive Product Renewal Date</description>
    <inlineHelpText>Competitive Product Renewal Date</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>